# exam_elt

./: .env  .env.dev  .gitignore  README.md  README_import_course.md  ai_chatbot.py  commons.py  crawl_vietjack.py  create_and_update_column.py  create_id_mapping_table.py  create_sync_logs_table.py  data_integration.py  database.py  debug.py  exam_bank_models.py  example_ids.txt  generate_explanation.py  generate_explanations.py  get_data.py  get_data_jl.py  get_structured_exam_id.py  grade_6_questions.json  grade_6_questions_with_explanation.json  grade_7_questions.json  id_lst.txt  import.py  import_ai_explanations.py  import_by_exam_id.py  import_course_by_id.py  import_exam_bank_by_exam_id.py  import_filtered_ids_from_quiz.py  import_knowledge_base.ipynb  import_vietjack.py  pyproject.toml  requirements.txt  run_exc.py  run_get_data.sh  sync.py  sync_by_exam_id.py  sync_exam_bank_by_exam_id.py  (+7 more)
ids/: exam_ids_imported.txt  exam_ids_synced.txt  quiz_ids_imported.txt
math_questions/: math_6.json  math_6_with_explanation.json  math_7.json  math_7_with_explanation.json  math_8.json  math_8_with_explanation.json  math_9.json  math_9_with_explanation.json
src/: commons.py  database.py
src/config/: config.py
src/models/: exam_bank_models.py  exam_bank_models_for_course.py
src/prompts/: copilot_cookies.txt  prompt.txt  safeguard_prompt.txt  user_prompt_essay_questions.txt  user_prompt_multi_choice_ques_hint.txt  user_prompt_multi_choise_ques_without_hint.txt  user_prompt_ques_hint.txt
src/services/: checker.py  cms_course_old_version_importer.py  course_importer.py  (+15 more)
