[tool.poetry]
name = "exam-etl"
version = "0.1.0"
description = ""
authors = ["vansy1511 <vansy151101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
psycopg = "^3.1.18"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
